# mnist-neural-network

./: CMakeLists.txt  README.md  main.cpp
include/: layers.hpp  loss.hpp  mnist_loader.hpp  neural_network.hpp  optimizer.hpp  utils.hpp
src/: layers.cpp  loss.cpp  mnist_loader.cpp  neural_network.cpp  optimizer.cpp  utils.cpp
